@@ -480,6 +480,8 @@ A hash			"hash"
 A matches		"matches"
 A shared		"shared"
 A exclusive		"exclusive"
+A terminal_capability	"terminal_capability"
+A environment		"environment"
 
 F abs			1
 F acos			1
