@@ -469,3 +469,5 @@ ATOM("hash"),
 ATOM("matches"),
 ATOM("shared"),
 ATOM("exclusive"),
+ATOM("terminal_capability"),
+ATOM("environment"),
